--- a/frontend/src/app/logout/logout.component.html
+++ b/frontend/src/app/logout/logout.component.html
@@ -1,3 +1,3 @@
 <div>You are logged out!</div>
 
-<a href="/">Click to log in again</a>
+<a href="http://localhost:8080/saml2/authenticate">Click to log in again</a>
